--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* Universal selector properties */
+/* Universal selector for page box-sizing */
 
 * {
     box-sizing: border-box;
@@ -6,13 +6,11 @@
     margin: 0;
 }
 
-
 /* body properties */
 
 body {
     background-color: #d9dcd6;
 }
-
 
 /* a tag properties */
 
@@ -21,13 +19,11 @@ a {
     text-decoration: none;
 }
 
-
 /* p tag properties */
 
 p {
     font-size: 16px;
 }
-
 
 /* Header Class div properties */
 
@@ -38,7 +34,7 @@ p {
     color: #ffffff;
 }
 
-/* Heading and span properties from Header Class div*/
+/* Heading and Span properties from Header Class div*/
 
 .header h1 {
     display: inline-block;
@@ -77,7 +73,6 @@ p {
     background-position: center;
 }
 
-
 /* Content Class Div properties */
 
 .content {
@@ -98,56 +93,26 @@ p {
     margin-left: 25px;
 }
 
-.search-engine-optimization {
+/* Searh-Engine-Optimization, Online-Reputation-Management, Social Media Marketing Class Properties */
+
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
-    background-color: #0072bb;
+    background-color: #2a607c;
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
-    background-color: #0072bb;
-    color: #ffffff;
-}
+/* Search Engine Optimization, Online Reputation Management, Social Media Marketing IMG properties */
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
+/* Search Enginge Optimization, Online Reputation Management, Social Media Marketing h2 properties */
 
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -162,54 +127,26 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
-    background-color: #2589bd;
+    background-color: #2a607c;
 }
 
-/* Lead, Brand, Cost, Heading, and Image properties from Benefits Class Div */ 
+/* Benefit Lead, Benefit Brand, Benefit Cost Margin and Color Properties */ 
 
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
+/* Benefit Lead, Benefit Brand, Benefit Cost h3 Header properties */
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-lead h3, .benefit-brand h3, .benenfit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+/* Benefit Lead, Benefit Brand, Benefit Cost img properties */
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
