--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ p {
     color: #ffffff;
 }
 
-/* Heading and Span properties from Header Class div*/
+/* Header and Span properties from Header Class div*/
 
 .header h1 {
     display: inline-block;
@@ -52,6 +52,8 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     font-size: 20px;
 }
+
+/* Unordered list within Header class properties */
 
 .header div ul {
     list-style-type: none;
