Added application link to README, Updated footer to a Footer tag in index.html, updated CSS to capture styles of Footer and H4 tag.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,13 +156,13 @@ p {
 
 /* Footer Class div and heading properties */
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif';
     text-align: center;
 }
 
-.footer h4 {
-    font-size: 20px;
+h4 {
+    font-size: 20px;    
 }
